# claude-mouse-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_en.md  claude_desktop_config.example.json  install-remote.ps1  install.ps1  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/claude_mouse_mcp/: __init__.py  server.py
tests/: test_server.py
